--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Első</title>
+  <title></title>
 </head>
 <body>
 
-<h1>Szászfai László</h1>
+  <h1>Szászfai László</h1>
   <h2>Szászfai László</h2>
   <h3>Szászfai László</h3>
   <h4>Szászfai László</h4>
   <h5>Szászfai László</h5>
   <h6>Szászfai László</h6>
-<p>9/A</p>
 
 </body>
 </html>
